# ExCore

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  README_cn.md  a.txt  codecov.yaml  codestyle-format.sh  codestyle_requirements.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  t.py
.github/workflows/: codestyle-check.yml  example.yaml  mypy.yaml  tests.yaml
core/: config.py  hub.py  registry.py
docs/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/blog/: 2024-2-29-config-system-in-deeplearning.mdx
docs/docs/: index.md
docs/docs/API/: -constants.md  -exceptions.md  -misc.md  index.md
docs/docs/CLI/: cache.mdx  index.md  workspace.mdx
docs/docs/Tuorial/: get_started.mdx  index.md
docs/docs/config/: API.mdx  config_extention.mdx  index.md  node.mdx
docs/docs/logging/: API.mdx
docs/docs/registry/: API.mdx  index.md
docs/src/css/: custom.css  tab.css
docs/src/pages/: _index.config.ts  index.js  index.module.css  index.tsx
docs/src/plugins/: inlinetab.js  sakana.js
example/: README.md  datasets.toml  finegrained.py  hook.toml  init.py  models.toml  optimizer.toml  prepare.py  register_all.py  run.py  run.toml  test.py
example/configs/: datasets.toml  detail.toml  finegrained.toml  hook.toml  models.toml  optimizer.toml  run.toml  test.toml
example/src/: __init__.py
example/src/dataset/: __init__.py  dataset.py
example/src/hook/: __init__.py  hooks.py
example/src/loss/: __init__.py  losses.py
example/src/lrche/: __init__.py  lrcheduler.py
example/src/model/: __init__.py  fcn.py
example/src/optim/: __init__.py  op.py
example/src/transform/: __init__.py  transforms.py
excore/: __init__.py  _constants.py  _exceptions.py  _json_schema.py  _misc.py  cli.py  config.py  constants.py  cuda_helper.py  exceptions.py  hook.py  hub.py  json_schema.py  logger.py  recorder.py  registry.py  utils.py
excore/cli/: _cache.py  _extension.py  _extention.py  _registry.py  _workspace.py  launch.py
excore/config/: __init__.py  _json_schema.py  action.py  config.py  lazy_config.py  model.py  models.py  parse.py
excore/engine/: __init__.py  hook.py  logging.py  registry.py
excore/plugins/: finegrained_config.py  hub.py  path_manager.py  yolo_config.py
excore/utils/: cuda_helper.py  hub.py  misc.py
tests/: init.py  test_a_registry.py  test_config.py  test_config_extension_310.py  test_config_extention.py  test_config_extention_310.py  test_hub.py  test_model.py  test_module_node_registry.py  test_path_manager.py  test_z_cli.py
tests/configs/: global.toml
tests/configs/backbones/: resnet.toml
tests/configs/dataset/: data.toml  data_error.toml
tests/configs/heads/: head.toml
tests/configs/launch/: data.toml  test_$_error.toml  test_$_error2.toml  test_$_error3.toml  test_class.toml  test_cls_and_other_module.toml  test_conflict_name.toml  test_dict_param.toml  test_env.toml  test_env_error.toml  test_finegrained.toml  test_hidden_error.toml  test_implicit.toml  test_lrsche.toml  test_missing_param.toml  test_module.toml  test_module_registry.toml  test_nest.toml  test_nest_hidden.toml  test_no_call_reused.toml  test_no_inst.toml  test_optim.toml  test_optim_hook.toml  test_other_field.toml  test_override.toml  test_param_conflict.toml  test_param_conflict_error.toml  test_ref_error.toml  test_ref_field_error.toml  test_registered_error.toml  test_reused_intern.toml  test_reused_intern_error.toml  test_scratchpads.toml
tests/configs/lrsche/: lrsche.toml  lrsche_error.toml
tests/configs/models/: deeplab.toml  fcn.toml
tests/configs/optim/: opt.toml  opt_with_hook.toml
tests/source_code/: __init__.py  dict_action.py  test.py
tests/source_code/dataset/: data.py
(+35 files in other folders)
