[tool.poetry]
name = "excore"
version = "0.1.1beta"
description = "Build your own development toolkit efficiently."
authors = ["Asthestarsfalll <1186454801@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Asthestarsfalll/excore"
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Typing :: Typed",
  "Topic :: Utilities",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.2"
requests = "2.28.1"
toml = "0.10.2"
tabulate = "*"
tqdm = "*"
pynvml = "*"
rich = "*"
astor = "*"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
pre-commit = "2.21.0"
ruff = "^0.1.14"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
torch = "1.13.1"
torchvision = "0.14.1"

[tool.poetry.scripts]
excore = 'excore.cli.launch:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
